# modular-rl

./: .gitignore  CLAUDE.md  README.md  benchmark_performance.py  debug_output.txt  debug_parity_1.py  debug_parity_2.py  debug_parity_3.py  debug_ucb.py  find_output.txt  grep_results.txt  imports_nets.txt  ppo_failure.txt  pyproject.toml  pytest.ini  reproduce_bug.py  reproduce_dirichlet_bug.py  reproduce_issue.py  requirements.txt  resources  search_diff.patch  setup.py  smoke_muzero_fix.py  test_c51.py  test_import.py  test_noisy_init.py  test_out.txt  test_output.txt  test_output_v2.txt  test_output_v3.txt  test_output_v4.txt  test_output_v5.txt  test_ppo_smoke.py  test_rainbow.py  verify_mcts_fix.py  verify_mcts_root_noise.py  verify_muzero.py  verify_muzero_config.py  verify_muzero_parity.py  wrappers.py
.claude/: settings.json
.tmp/: fontlist-v390.json
RL_RESEARCH.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
actors/: __init__.py  core.py  puffer_actor.py  tester.py
agent_configs/: README.md  actor_config.py  base_config.py  critic_config.py  muzero_config.py  ppo_config.py  sl_config.py
agents/: README.md  actors.py  agent.py  catan_player_wrapper.py  dqn_actor.py  muzero.py  muzero_actor.py  muzero_learner.py  muzero_policy.py  nfsp.py  policy_imitation.py  ppo.py  rainbow_dqn.py  random.py  random_agent.py  search_policy.py  tictactoe_expert.py  torch_mp_agent.py
compiler/: analyzer.py  compiler.py  fusion_rules.py  optimizer.py  partition.py  pipeline.py  planner.py  rewrite.py  scheduler.py  validation.py
components/: CONSTRAINTS.md  __init__.py  actor_logic.py  environment.py  learner_telemetry.py  math.py  memory.py  neural.py  priorities.py  routing.py  search.py  targets.py  telemetry.py  valves.py
configs/: base.py  selectors.py
core/: __init__.py  batch.py  batch_iterators.py  blackboard.py  blackboard_diff.py  blackboard_engine.py  component.py  contracts.py  execution_graph.py  graph.py  inspect.py  iterators.py  nodes.py  path_resolver.py  schema.py  shape_validation.py  types.py  validation.py
custom_gym_envs_pkg/: README.md
data/: concurrency.py  processors.py  writers.py
docs/: architecture.md  capabilities.md
elo/: README.md  elo.py
env_factories/: __init__.py  tictactoe.py
examples/: README.md  (+5 more)
search/search_cpp/: CMakeLists.txt  backprop.cpp  backprop.hpp  bindings.cpp  min_max_stats.cpp  min_max_stats.hpp  modular_search.cpp  modular_search.hpp  nodes.cpp  nodes.hpp  scoring.cpp  scoring.hpp  selection.cpp
search_cpp/: CMakeLists.txt  backprop.cpp  backprop.hpp  bindings.cpp  min_max_stats.cpp  min_max_stats.hpp  nodes.cpp  nodes.hpp  scoring.cpp  scoring.hpp  selection.cpp  selection.hpp
(+1406 files in other folders)
