[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-research"
version = "0.1.0"
description = "Reinforcement Learning Research Codebase"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "gymnasium",
    "opencv-python-headless",
    "matplotlib",
    "pandas",
    "scipy",
    "scikit-learn",
    "tqdm",
    "tensorboard",
    "pygame",
    "imageio",
    "moviepy",
    "pyyaml",
    "requests",
    "typing_extensions",
    "psutil",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pettingzoo",
    "dill",
    "hyperopt",
    "catanatron",
    "pillow",
    "easydict",
    "rlcard",
    "attrs",
]

[tool.setuptools.packages.find]
include = ["*", "custom_gym_envs_pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["agents", "modules", "search", "replay_buffers", "losses", "custom_gym_envs"]
omit = [
    "**/deprecated/**",
    "tests/**",
    "experiments/**",
    "scripts/**",
    "**/__init__.py",
]

[tool.coverage.report]
omit = [
    "**/deprecated/**",
    "tests/**",
    "experiments/**",
    "scripts/**",
    "**/__init__.py",
]
